# spsvalidator

./: SECURITY_ADHERENCE.md
.github/ISSUE_TEMPLATE/: novo_projeto.md
spsvalidator/: README.md  babel.cfg  pyproject.toml  setup.py
spsvalidator/packaging/: README.md  build_linux.sh  build_macos.sh  build_windows.ps1  generate_build_info.sh  generate_icns.sh  icon.icns
spsvalidator/src/spsvalidator/: __init__.py  app.py  build_info.py  build_metadata.py  desktop_api.py  main.py  spsvalidator_linux.spec  version.py
spsvalidator/src/spsvalidator/db/: repository.py
spsvalidator/src/spsvalidator/domain/: export.py  html_preview.py  metadata.py  validation.py  zip_parser.py
spsvalidator/src/spsvalidator/services/: validation_service.py
spsvalidator/src/spsvalidator/translations/en/LC_MESSAGES/: messages.po
spsvalidator/src/spsvalidator/translations/es/LC_MESSAGES/: messages.po
spsvalidator/src/spsvalidator/translations/pt/LC_MESSAGES/: messages.po
spsvalidator/src/spsvalidator/web/: i18n.py  routes.py
spsvalidator/src/spsvalidator/web/templates/: _history_list.html  index.html
spsvalidator/tests/: conftest.py  test_desktop_api.py  test_export.py  test_html_preview.py  test_i18n.py  test_metadata.py  test_packtools_validations.py  test_service_and_web.py  test_validate_sps_xml_with_pre.py  test_validation_integration.py  test_version.py
