[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spsvalidator"
version = "0.0.1"
description = "Standalone SPS package validator desktop webapp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0.0",
  "lxml>=5.0.0",
  "packtools @ git+https://git@github.com/scieloorg/packtools@4.16.7",
  "pywebview>=5.1",
  "setuptools>=68,<82",
  "requests>=2.31.0",
  "tenacity>=8.2.0",
  "langdetect~=1.0.9",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "isort>=5.13.0",
  "pytest>=8.0.0",
]

[project.scripts]
spsvalidator = "spsvalidator.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spsvalidator = ["web/templates/*.html", "web/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
